# wheat-crop-monitoring

./: .gitignore  .gitlab-ci.yml  README.md  claude.md  prblm.md  pyproject.toml  requirements.txt
.gsd/: ROADMAP.md  SPEC.md  STATE.md  optimize_notebook.py  optimize_sown_area_notebook.py
config/: config.yaml
data/: POWER_Point_Daily_20150101_20231231_030d90N_075d80E_LST.csv
data/nasa_power/: POWER_Bihar_20150101_20231231.csv  POWER_Gujarat_20150101_20231231.csv  POWER_Haryana_20150101_20231231.csv  POWER_Madhya_Pradesh_20150101_20231231.csv  POWER_Maharashtra_20150101_20231231.csv  POWER_Punjab_20150101_20231231.csv  POWER_Rajasthan_20150101_20231231.csv  (+1 more)
notebooks/: 01_aoi_and_data_acquisition.ipynb  02_sar_optical_fusion_sown_area.ipynb  03_vhi_crop_health_monitoring.ipynb  04_yield_forecast_ml.ipynb  05_validation_and_reporting.ipynb  06_deep_learning_classification.ipynb  07_phenology_and_unmixing.ipynb  08_crop_model_assimilation_uncertainty.ipynb  09_crop_analytics_visualization.ipynb
scratch/: build_visualization_notebook.py  fix_comment.py  optimize_notebook_02.py  patch_notebooks.py  test_all_states.py  test_cell1.py  test_classification.py  test_cldprb.py  test_cldprb_val.py  test_fast_sampling.py  test_gee.py  test_nasa.py
src/: __init__.py  classification.py  crop_model.py  deep_models.py  gee_utils.py  indices.py  io_utils.py  phenology.py  sar_processing.py  uncertainty.py  unmixing.py  visualization.py  yield_model.py
tests/: test_crop_model.py  test_io_utils.py  test_phenology.py  test_uncertainty.py  test_unmixing.py  test_yield_model.py
(+3 files in other folders)
