[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wheat-crop-monitoring"
version = "1.0.0"
description = "Satellite-based wheat sown area mapping, crop health monitoring, and yield forecasting for 8 Indian states."
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=0.1.380",
    "geemap>=0.30.0",
    "geopandas>=0.14.0",
    "rasterio>=1.3.9",
    "xarray>=2023.12.0",
    "netCDF4>=1.6.5",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "folium>=0.15.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
deep = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
